# phileas-python

./: .gitignore  404.html  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: docs.yml  tests.yml
api-reference/: index.html
cli/: index.html
docs/: api-reference.md  cli.md  examples.md  filters.md  index.md  installation.md  policies.md  quickstart.md  rest-server.md
examples/: index.html
filters/: index.html
installation/: index.html
phileas/: __init__.py  cli.py  server.py
phileas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
phileas/filters/: __init__.py  age_filter.py  bank_routing_number_filter.py  base.py  bitcoin_address_filter.py  credit_card_filter.py  currency_filter.py  custom_filter.py  date_filter.py  dictionary_filter.py  drivers_license_filter.py  email_address_filter.py  iban_code_filter.py  ip_address_filter.py  mac_address_filter.py  passport_number_filter.py  pattern_filter.py  ph_eye_filter.py  phone_number_filter.py  ssn_filter.py  street_address_filter.py  tracking_number_filter.py  url_filter.py  vin_filter.py  zip_code_filter.py
phileas/models/: __init__.py  evaluation_result.py  filter_result.py  span.py
phileas/policy/: __init__.py  filter_strategy.py  identifiers.py  policy.py  zip_code_population.py
phileas/services/: __init__.py  evaluation_service.py  filter_service.py
phileas/services/anonymization/: __init__.py  age_anonymization_service.py  bank_routing_number_anonymization_service.py  base.py  bitcoin_address_anonymization_service.py  credit_card_anonymization_service.py  currency_anonymization_service.py  date_anonymization_service.py  drivers_license_anonymization_service.py  email_address_anonymization_service.py  iban_code_anonymization_service.py  ip_address_anonymization_service.py  mac_address_anonymization_service.py  passport_number_anonymization_service.py  phone_number_anonymization_service.py  ssn_anonymization_service.py  street_address_anonymization_service.py  tracking_number_anonymization_service.py  url_anonymization_service.py  vin_anonymization_service.py  zip_code_anonymization_service.py
phileas/services/context/: __init__.py  base.py  in_memory_context_service.py
policies/: index.html
quickstart/: index.html
rest-server/: index.html
search/: search_index.json
tests/: __init__.py  test_anonymization.py  test_cli.py  test_context_service.py  test_evaluation.py  test_filters.py  test_performance.py  test_policy.py  test_server.py  test_service.py
